bk_ida/gccida/c0/emit_pop_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_pop_insn/src/reg-stack.c:1379:56: error: must use 'enum' tag to refer to type 'emit_where'
rtx  emit_pop_insn( rtx insn, stack regstack, rtx reg, emit_where where) 
                                                       ^
                                                       enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_pop_insn/src/reg-stack.c:1388:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)reg)] == MODE_COMPLEX_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_pop_insn/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_pop_insn/src/reg-stack.c:1389:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)reg)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_pop_insn/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_pop_insn/src/obj/reg-stack.o] Error 1
